build 환경 체크