@@ -1,10 +1,13 @@
 #!/bin/sh
 
-export JAVA_HOME=/home/kepha/.jdks/corretto-17.0.3
+export JAVA_HOME=/usr/lib/jvm/java-17-amazon-corretto
+
 export PATH=$JAVA_HOME/bin:$PATH
+
+export BASE="--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED"
 
 gradle clean
 
-gradle build --exclude-task test --stacktrace
+gradle build $BASE --exclude-task test --stacktrace
 
 
